Adding tests of all services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '2'
+
 services:
   postgres:
     image: 'postgres:9.5'
@@ -13,6 +14,8 @@ services:
       - '9292:9292'
     volumes:
       - '.:/onebitbot'
+    environment:
+      - LANG=C.UTF-8
 
 volumes:
   postgres:
